...
/// the user will be shown the account they are currently signed in with and
/// they can choose to sign out to use another Google Account.
///
/// {@category View}
class LoginView extends StatefulWidget {

  LoginView() : super(key: ValueKey("LoginView"));

  @override
  _LoginViewState createState() => new _LoginViewState();

}

...
                  flex: 3,
                  child: Padding(
                    padding: const EdgeInsets.all(24.0),
                  ),
                ),
                GoogleSignInButton(
                  key: ValueKey("LogInButton"),
                  text: account.hasData ? "Continue with Google":
                  "Sign in with Google",
                  onPressed: () {
                    // Call the Auth service and wait for the user to be
                    // redirected back
                    callAuthAction();
...
