...
        appBar: AppBar(
            title: _buildTitle(),
            actions: _buildActions()
        ),
        body: buildBody(),
        floatingActionButton: new Visibility(
          key: ValueKey("EventCreationFAB"),
          visible: widget.type == FeedType.PersonalFeed &&
              _userStore.user.userPrivilege != UserPrivilege.User,
          child: new FloatingActionButton(
            onPressed: (){
              Navigator.of(context).pushNamed('/create_event');
            },
...
